# embedded-log

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson_options.txt
.github/: SECURITY.md
.github/workflows/: ci.yml
config/: log_version.h.in
include/: log.h  log_conf.h
src/: log.c
tests/: meson.build  test_harness.h  test_log.c
